--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Home</h1>
     <header>
-<img src="/public/images/logo-mercado-liebre.svg" alt="logo mercado liebre">
+<img src="images/logo-mercado-liebre.svg" alt="logo mercado liebre">
 <span>Lugar para poner barra de búsqueda</span>
 <p>Comprá en cuotas y sin tarjeta de créditos</p>
 <nav>
@@ -29,11 +29,11 @@
 
     </header>
     <main>
-        <img src="/public/images/img-home-banner.jpg" alt="Banner ofertas" width="100%">
+        <img src="images/img-home-banner.jpg" alt="Banner ofertas" width="100%">
         <section>
             <h4>Basado en tu última visita</h4>
             <article> <!-- cafetera-->
-                <img src="/public/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
+                <img src="images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
                 <p>$6.770</p>
                 <p>40% off</p>
                 <h5>Cafetera Cafetera-moulinex</h5>
@@ -42,7 +42,7 @@
         <section>
             <h4>Basado en tu última visita</h4>
             <article> <!-- mac-->
-                <img src="/public/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+                <img src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
                 <p>$230.000</p>
                 <p>20% off</p>
                 <h5>MacBook Pro 2019</h5>
@@ -51,7 +51,7 @@
         <section>
             <h4>Basado en tu última visita</h4>
             <article> <!-- cel-->
-                <img src="/public/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
                 <p>$70.500</p>
                 <p>10% off</p>
                 <h5>Samsung Galaxy S10</h5>
@@ -60,7 +60,7 @@
         <section>
             <h4>Basado en tu última visita</h4>
             <article> <!-- tv-->
-                <img src="/public/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+                <img src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
                 <p>$23.200</p>
                 <p>5% off</p>
                 <h5>SmartTv Samsung 43"</h5>
@@ -70,7 +70,7 @@
              <!--SECCION OFERTAS-->
             <h4>Seccion Ofertas</h4>
             <article> <!-- tv-->
-                <img src="/public/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
+                <img src="images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
                 <p>$6.770</p>
                 <p>40% off</p>
                 <h5>Cafetera Moulinex</h5>
@@ -78,7 +78,7 @@
         </section>
             <h4>Seccion Ofertas</h4>
             <article> <!-- tv-->
-                <img src="/public/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+                <img src="images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
                 <p>$230.000</p>
                 <p>40% off</p>
                 <h5>MacBook Pro 2019</h5>
@@ -86,7 +86,7 @@
         </section>
             <h4>Seccion Ofertas</h4>
             <article> <!-- tv-->
-                <img src="/public/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
                 <p>$70.500</p>
                 <p>10% off</p>
                 <h5>Samsung Galaxy S10</h5>
@@ -94,7 +94,7 @@
         </section>
             <h4>Seccion Ofertas</h4>
             <article> <!-- tv-->
-                <img src="/public/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+                <img src="images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
                 <p>$23.200</p>
                 <p>5% off</p>
                 <h5>SmartTv Samsung 43"</h5>
