--- a/views/home.html
+++ b/views/home.html
@@ -136,5 +136,11 @@ TAREA: modificar el article
         </article>
         <span>● Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</span>
     </footer>
+
+    <!--git init
+        git commit -m "mensaje"
+        git add . 
+        git status
+        git push -u origin master-->
 </body>
 </html>
