comentarios en html, sobre el repositorio y el puerto

--- a/views/home.html
+++ b/views/home.html
@@ -136,7 +136,11 @@ TAREA: modificar el article
         </article>
         <span>● Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</span>
     </footer>
-
+ <p><!--git init
+    git commit -m "mensaje"
+    git add . 
+    git status
+    git push -u origin master--></p>
     <!--git init
         git commit -m "mensaje"
         git add . 
