--- a/views/home.html
+++ b/views/home.html
@@ -141,7 +141,10 @@ TAREA: modificar el article
     git add . 
     git status
     git push -u origin master--></p>
-    <!--git init
+    <!--EL PUERTO 
+     localhost:3000/-->
+    <!--SUBIENDO A REPOSITORIO
+        git init
         git commit -m "mensaje"
         git add . 
         git status
